--- a/FinalProject_RyanWall/FinalProject_RyanWall/Content/RyansStyleSheet.css
+++ b/FinalProject_RyanWall/FinalProject_RyanWall/Content/RyansStyleSheet.css
@@ -135,3 +135,8 @@ th{
 #add-list-item:hover{
     box-shadow:10px 10px 5px
 }
+#myModalLabel{
+    background-color:red;
+    color:dodgerblue;
+
+}
