--- a/FinalProject_RyanWall/FinalProject_RyanWall/Content/RyansStyleSheet.css
+++ b/FinalProject_RyanWall/FinalProject_RyanWall/Content/RyansStyleSheet.css
@@ -136,7 +136,10 @@ th{
     box-shadow:10px 10px 5px
 }
 #myModalLabel{
-    background-color:red;
-    color:dodgerblue;
+   
+    color:white;
 
+}
+#modaljumbo{
+     background-color:red;
 }
