--- a/FinalProject_RyanWall/FinalProject_RyanWall/Views/ToDoList/Index.cshtml
+++ b/FinalProject_RyanWall/FinalProject_RyanWall/Views/ToDoList/Index.cshtml
@@ -141,7 +141,7 @@
 <div class="modal fade" id="insert-List-Item-Modal" tabindex="-1" role="dialog" aria-labelledby="Add List Item">
     <div class="modal-dialog" role="document">
         <div class="modal-content">
-            <div class="modal-header jumbotron">
+            <div class="modal-header jumbotron" id="modaljumbo">
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
                 <h4 class="modal-title" id="myModalLabel">Add List Item</h4>
             </div>
